[gd_scene load_steps=4 format=3 uid="uid://o5jqrffn2qdw"]

[ext_resource type="Script" path="res://scenes/enemies/drone.gd" id="1_iemgr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kf5mn"]
size = Vector2(22, 68)

[sub_resource type="CircleShape2D" id="CircleShape2D_ggsw8"]
radius = 675.0

[node name="Drone" type="Area2D"]
collision_layer = 128
collision_mask = 3
script = ExtResource("1_iemgr")

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(0.1, 0.1)
color = Color(1, 0, 0, 1)
offset = Vector2(0, -200)
polygon = PackedVector2Array(0, -319, 320, 192, 92.205, 192, 319, 543, -323, 544, -99.5784, 192, -320, 192)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kf5mn")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_ggsw8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
